--- a/cms/build.gradle
+++ b/cms/build.gradle
@@ -17,8 +17,22 @@ ext {
 }
 
 dependencies {
+
+
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    //implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.projectlombok:lombok'
+    runtimeOnly 'com.h2database:h2'
+    implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
+
+
+    def drools_version='7.15.0.Final'
+    implementation "org.drools:drools-decisiontables:$drools_version"
+    implementation "org.drools:drools-core:$drools_version"
+    implementation "org.drools:drools-compiler:$drools_version"
+
+
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
